--- a/Learning_Unreal/Config/DefaultEngine.ini
+++ b/Learning_Unreal/Config/DefaultEngine.ini
@@ -32,7 +32,7 @@ r.NormalMapsForStaticLighting=False
 ;defines what level to be loaded by default in the editor and at playback time
 GameDefaultMap=/Game/Main.Main
 EditorStartupMap=/Game/Main.Main
-
+GameInstanceClass=/Game/MYGameInstance.MYGameInstance_C
 
 [/Script/UnrealEd.UnrealEdEngine]
 ; Remove Engine Template maps
@@ -42,3 +42,4 @@ EditorStartupMap=/Game/Main.Main
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_AEC_BlankBP",NewGameName="/Script/Learning_Unreal")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_AEC_BlankBP",NewGameName="/Script/Learning_Unreal")
+
