--- a/Learning_Unreal/Config/DefaultEngine.ini
+++ b/Learning_Unreal/Config/DefaultEngine.ini
@@ -26,7 +26,7 @@ r.SupportSkyAtmosphereAffectsHeightFog=True
 r.DefaultFeature.LensFlare=True
 r.ClearCoatNormal=False
 r.NormalMapsForStaticLighting=False
-
+r.CustomDepth=3
 
 [/Script/EngineSettings.GameMapsSettings]
 ;defines what level to be loaded by default in the editor and at playback time
